# timber-py

./: .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml  readme.md  setup.py  setup_dev.bat  setup_dev.sh
.github/workflows/: update-timber-c.yml
timber/: __init__.py  _timber.c
